testsuite/testcases/src/test/cases/unicode-blocks/unicode-blocks-f-flex.output
Reading "src/test/cases/unicode-blocks/unicode-blocks-f.flex"
Including "src/test/cases/unicode-blocks/common-unicode-blocks-java"

Error in file "src/test/cases/unicode-blocks/unicode-blocks-f.flex" (line 14): 
Invalid Unicode property
\p{Block:This will never be a block name} { setCurCharBlock("Alphabetic Presentation Forms"); }
   ^
